--- a/CS-GO-Buy-Recommender/pom.xml
+++ b/CS-GO-Buy-Recommender/pom.xml
@@ -72,6 +72,17 @@
 			<artifactId>kie-spring</artifactId>
 			<version>${kie.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
