--- a/CS-GO-Buy-Recommender/pom.xml
+++ b/CS-GO-Buy-Recommender/pom.xml
@@ -80,6 +80,18 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-verifier</artifactId>
+			<version>6.2.0.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
