Prepare endpoints for writing rules in runtime

--- a/CS-GO-Buy-Recommender/pom.xml
+++ b/CS-GO-Buy-Recommender/pom.xml
@@ -92,6 +92,13 @@
 			<version>6.2.0.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.12</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
