--- a/Client/package.json
+++ b/Client/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "highlight.js": "~9.18.1",
+    "ngx-highlightjs": "^4.0.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
